@@ -1,6 +1,8 @@
 --------------------------
 Changes in 1.9 (not yet released)
 
+- Randomizer now returns range 0..randMax as documented and no longer 1..randMax as it did before. randMax got reduced by 1.
+- Resetting Randomizer with 0 or no longer breaks it (will be set to 1). Same for other numbers for which it wasn't defined.
 - Add SMaterialLayer::TextureWrapW for cubemap texture wrap mode at W axis.
 - Add cubemap texture support for D3D9 and OpenGL drivers.
 - Do no longer re-calculate md2 frames when they don't change (thx @npc for reporting)
